==> jpnorair/OpenTag/otplatform/stm32l1xx/mpipe_uart_STM32L1xx.c <==
#include "OT_platform.h"
#   define BOARD_PARAM_MPIPE_IFS 1
#include "buffers.h"
#include "mpipe.h"
#define MPIPE_FOOTERBYTES   4
#define MPIPE_UARTMODES     ( (BOARD_FEATURE_MPIPE_DIRECT == ENABLED) \
                            + (BOARD_FEATURE_MPIPE_BREAK == ENABLED)  \
                            + (BOARD_FEATURE_MPIPE_CS == ENABLED)     \
                            + (BOARD_FEATURE_MPIPE_FLOWCTL == ENABLED))
#define MPIPE_MODES         (MPIPE_UARTMODES)
#   define BUILD_NVIC_SUBGROUP_MPIPE 0
#define _SUBGROUP   (BUILD_NVIC_SUBGROUP_MPIPE & (16 - (16/__CM3_NVIC_GROUPS)))
#define _IRQGROUP   ((PLATFORM_NVIC_IO_GROUP + _SUBGROUP) << 4)
#   define _CTS_IRQ
#   define _BREAK_IRQ
#   define __REQUEST_FULL_SPEED();  // sys_req_fullspeed()
#   define __DISMISS_FULL_SPEED();  // sys_clr_fullspeed()
#   define __REQUEST_FULL_SPEED();
#   define __DISMISS_FULL_SPEED();
#   define _UARTCLK         (((ot_u32)platform_ext.cpu_khz*1000)/BOARD_PARAM_APB2CLKDIV)
#   define _UARTCLK_HS      (PLATFORM_HSCLOCK_HZ/BOARD_PARAM_APB2CLKDIV)
#   define _UART_IRQ        USART1_IRQn
#   define _DMARX           DMA1_Channel5
#   define _DMATX           DMA1_Channel4
#   define _DMARX_IRQ       DMA1_Channel5_IRQn
#   define _DMATX_IRQ       DMA1_Channel4_IRQn
#   define _DMARX_IFG       (0xF << (4*(5-1)))
#   define _DMATX_IFG       (0xF << (4*(4-1)))
#   define __UART_ISR       platform_isr_usart1
#   define __DMARX_ISR      platform_isr_dma1ch5
#   define __DMATX_ISR      platform_isr_dma1ch4

ot_int mpipedrv_init(void* port_id) {
/// 1. "port_id" is unused in this impl, and it may be NULL
/// 2. Prepare the HW, which in this case is a UART
/// 3. Set default speed, which in this case is 115200 bps
    ot_u8 baud_id;
    
#   if (MPIPE_UARTMODES == 1)
#       if (BOARD_PARAM_MPIPE_FLOWCTL || BOARD_PARAM_MPIPE_CS)
        mpipe.state = MPIPE_Null;
#       else
        mpipe.state = MPIPE_Idle;
#       endif
        baud_id     = MPIPE_115200bps;
#   else
        uart.mode   = ((ot_u8*)port_id)[0];
        mpipe.state = (uart.mode & 2) ? MPIPE_Null : MPIPE_Idle; 
        baud_id     = (uart.mode == 0) ? 0 : ((ot_u8*)port_id)[1];  
#   endif
    
    
    /// UART Setup (RX & TX setup takes place at time of startup)
    __UART_CLKON();
    MPIPE_UART->BRR     = br_hssel[baud_id];
    MPIPE_UART->CR3     = USART_CR3_DMAR | USART_CR3_DMAT;
    MPIPE_UART->CR2     = 0;
    MPIPE_UART->CR1     = 0;
    __UART_CLKOFF();
    
    
    /// Set up DMA channels for RX and TX
//  _DMARX->CCR     = 0;
//  _DMATX->CCR     = 0;
//  _DMARX->CNDTR   = 0;                    //buffer size, filled on usage
//  _DMATX->CNDTR   = 0;                    //buffer size, filled on usage
//  _DMARX->CMAR    = (uint32_t)(NULL);     //data buffer, filled on usage
//  _DMATX->CMAR    = (uint32_t)(NULL);     //data buffer, filled on usage
    _DMARX->CPAR    = (uint32_t)&(MPIPE_UART->DR);
    _DMATX->CPAR    = (uint32_t)&(MPIPE_UART->DR);
    
    /// MPipe RX DMA Interrupt, always used
    NVIC->IP[(ot_u32)_DMARX_IRQ]        = _IRQGROUP;
    NVIC->ISER[(ot_u32)(_DMARX_IRQ>>5)] = (1 << ((ot_u32)_DMARX_IRQ & 0x1F));
    
    NVIC->IP[(ot_u32)_DMATX_IRQ]        = _IRQGROUP;
    NVIC->ISER[(ot_u32)(_DMATX_IRQ>>5)] = (1 << ((ot_u32)_DMATX_IRQ & 0x1F));
    
    /// MPipe TX TC USART Interrupt (doesn't seem to work)
    //NVIC->IP[(ot_u32)_UART_IRQ]         = _IRQGROUP;
    //NVIC->ISER[(ot_u32)(_UART_IRQ>>5)]  = (1 << ((ot_u32)_UART_IRQ & 0x1F));
    
    
    /// Configure optional double-edge CTS interrupt
    /// NVIC configuration must be in the platform_STM32L1xx.c implementation,
    /// due to the way EXTIs are shared.
#   if (BOARD_FEATURE(MPIPE_FLOWCTL) || BOARD_FEATURE(MPIPE_CS))
        EXTI->FTSR  |= MPIPE_UART_CTSPIN;
        EXTI->RTSR  |= MPIPE_UART_CTSPIN;
#   endif
    
        
    /// Final MPIPE configuration
#   if (MPIPE_USE_ACKS)
    uart.priority   = MPIPE_Low;
#   endif
    uart.seq.ushort = 0;          //not actually necessary

    alp_init(&mpipe.alp, &dir_in, &dir_out);
    mpipe.alp.inq->back    -= 10;
    mpipe.alp.outq->back   -= 10;
        
    
    return 255;
}

void mpipedrv_setspeed(mpipe_speed speed) {
    __UART_CLKON();
    MPIPE_UART->BRR = br_hssel[speed];
    __UART_CLKOFF();
}

void mpipedrv_rxndef(ot_bool blocking, mpipe_priority data_priority) {
#if (MPIPE_UARTMODES == 1) && (BOARD_FEATURE(MPIPE_DIRECT))
    /// DIRECT UART Only
    sub_rxndef(blocking, data_priority);

#elif (MPIPE_UARTMODES == 1)
    /// CTS/RTS or DTR UART Only
    if (__UART_CHECKPIN())  sub_rxndef(blocking, data_priority);
    else                    EXTI->IMR |= MPIPE_CTS_PIN;

#else
    /// Multiple, software configurable UART modes
    ot_u16 cts_mask;
    cts_mask    = (uart.mode & 2) << (MPIPE_UART_CTSPIN-1);
    cts_mask   &= MPIPE_UART_PORT->IDR;
    EXTI->IMR  |= cts_mask;
    
    if (cts_mask == 0) {
        mpipe.state = MPIPE_Idle;
        sub_rxndef(blocking, data_priority);
    }
}

void mpipedrv_isr() {
/// MPipe is state-based.  Depending on the MPipe implementation and the HW
/// implementation of the DMA+UART, state transitions may happen differently.
/// <LI> In typical RX, there is a header detection event that sets-up a second
///      RX process for downloading the rest of the packet.  When the DMA is
///      done, the process completes.  </LI>
/// <LI> For TX, there is a wait-state needed while the HW UART finishes
///      sending the DMA buffered data (two bytes). </LI>
/// <LI> If MPipe does not have HW acks, then software can be used to manage
///      Acks.  In this case, a complete TX process also requires RX'ing an
///      Ack, and a complete RX process requires TX'ing an Ack. </LI>
    ot_bool tx_process = False;
#if (BOARD_FEATURE_USBCONVERTER != ENABLED)
    ot_u16 crc_result;
#endif

    __DMA_ALL_CLOSE();
    __DMA_ALL_CLEAR();
    
    switch (mpipe.state) {
        case MPIPE_Idle: //note, case doesn't break!
        
        case MPIPE_RxHeader: {
            ot_u8* payload_front;
            ot_int payload_len;
            mpipe.state             = MPIPE_RxPayload;
            payload_len             = mpipe.alp.inq->front[2];
            mpipe.alp.inq->length   = payload_len + 10;
            payload_front           = mpipe.alp.inq->front + 10;
            mpipe.alp.inq->back     = payload_front + payload_len;
            __DMA_RXOPEN(payload_front, payload_len);
            
            ///@todo This should be dynamic (current value relevant for 115200),
            ///      and it will need to be conditional when RTS/CTS is enabled.
            mpipeevt_rxdetect( __MPIPE_TIMEOUT(payload_len) );
        }   return;

        case MPIPE_RxPayload: {
            ot_u8* footer;
            footer                  = mpipe.alp.inq->back;
            uart.seq.ubyte[UPPER]   = *footer++;
            uart.seq.ubyte[LOWER]   = *footer;
            
            // CRC is Good (==0) or bad (!=0) Discard the packet if bad
#           if (BOARD_FEATURE_USBCONVERTER != ENABLED)
            crc_result = platform_crc_block(mpipe.alp.inq->front, mpipe.alp.inq->length);
#           endif
            
#           if (MPIPE_USE_ACKS)
            // ACKs must be used when Broadcast mode is off
            // 1. On ACKs, txndef() requires caller to choose state 
            // 2. Copy RX'ed seq number into local seq number
            // 3. Copy NACK/ACK status to 6th byte in NDEF header
            if (uart.priority != MPIPE_Broadcast) {
                mpipe.state = MPIPE_TxAck_Done; //MPIPE_TxAck_Wait;
                sub_txack_header(crc_result);
                mpipedrv_txndef(False, MPIPE_Ack);
                return;
            }
#           endif
        } goto mpipedrv_isr_RXSIG;

        //case MPIPE_TxAck_Wait:
            //MPIPE_UART->IE = UCTXIE;
            //return;

#       if (MPIPE_USE_ACKS)        
        case MPIPE_TxAck_Done:  // TX'ed an ACK
            if (mpipe.alp.outq->front[5] != 0) { // TX'ed a NACK
                mpipedrv_rxndef(False, uart.priority);
                mpipe.state = MPIPE_RxHeader;
                return;
            }
            uart.priority = MPIPE_Low;
            goto mpipedrv_isr_RXSIG;
#       endif

        //case MPIPE_Tx_Wait:
            //Do a wait or setup some interim interrupt
            //(none used here)
            //return;

#       if (MPIPE_USE_ACKS)
        case MPIPE_Tx_Done:
            //Cancel Tx_Wait interim interrupt, if any
            //(none used here)
            if (uart.priority != MPIPE_Broadcast) {
                mpipedrv_rxndef(False, MPIPE_Ack);
                mpipe.state = MPIPE_RxAck;
                return;
            }
            goto mpipedrv_isr_TXSIG;
#       endif          
        
#       if (MPIPE_USE_ACKS)        
        case MPIPE_RxAck:
            if (platform_crc_block(mpipe.alp.inq->front, 10) != 0) { //RX'ed NACK
                mpipedrv_txndef(False, uart.priority);
                return;
            }
            goto mpipedrv_isr_TXSIG;
#       endif
            
       //default: goto mpipedrv_isr_TXSIG;  //normal behavior is to fall through
    }
    
    // The TX process is complete, including any ACKing.
    // - Check the TX queue to see if there is anything queued.
    // - If yes, then piggyback the transmission
    // - If no, then close Mpipe and call txdone event handler in the MPipe Task
    mpipedrv_isr_TXSIG:
    if (mpipe.alp.outq->getcursor != mpipe.alp.outq->putcursor) {
        ot_u16 nextpkt_len;
        nextpkt_len = (mpipe.alp.outq->putcursor - mpipe.alp.outq->getcursor) + 2;
        sub_txopen( mpipe.alp.outq->getcursor, nextpkt_len);
        return;
    }
    mpipedrv_kill();
    mpipeevt_txdone(0);
    return;
    
    
    // The RX process is complete, including and ACKing.
    // - Close MPipe and call rxdone event handler from MPipe Task
    // - If RX CRC matters, then make sure to compute it.
    mpipedrv_isr_RXSIG:
    sub_mpipe_close();
#   if (BOARD_FEATURE_USBCONVERTER != ENABLED)
        mpipeevt_rxdone((ot_int)crc_result);
#   else
        mpipeevt_rxdone(0);
#   endif
    
}
